# Kaggle_Gym

./: .gitignore  Experiment pretrained.ipynb  Kaggle_CMI.ipynb  Makefile  YANS .ipynb  YANS_pre_trained_NER.ipynb  YANS_v2.ipynb  YANS_v3.ipynb  pyproject.toml  time_series.ipynb  train_layoutlmv3_on_cord.ipynb  version_check.py
