[project]
name = "kaggle-gym"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66.5",
    "torch>=2.6.0",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "jupyterlab>=4.4.3",
]

[tool.uv.sources]
torch = {index = "pytorch"}

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
default = true
