[project]
name = "kaggle-gym"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66.5",
    "torch>=2.6.0",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "jupyterlab>=4.4.3",
    "pandas>=2.3.0",
    "outlines>=1.0.2",
    "polars>=1.31.0",
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "pytesseract>=0.3.13",
    "torchinfo>=1.8.0",
    "opencv-python>=4.11.0.86",
    "regex>=2024.11.6",
    "numpy>=2.2.6",
    "transformers>=4.53.1",
    "importlib-metadata>=8.7.0",
    "accelerate>=1.8.1",
    "evaluate>=0.4.5",
    "seqeval>=1.2.2",
]

[tool.uv.sources]
torch = {index = "pytorch"}

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
default = true
